# MyEsp32Project

./: README.md
SW2812B/: CMakeLists.txt  sdkconfig  sdkconfig.old
SW2812B/main/: CMakeLists.txt  adc_drive.c  user_fun.c  user_main.c  user_main.h
SW2812B/main/LZ77/: LZ77.C
SW2812B/main/Screen_drive/: Screen_drive.c  Screen_drive.h
SW2812B/main/button/: button.c  button.h
SW2812B/main/clock/: clock.c  clock.h
SW2812B/main/mqtt/: xxh_mqtt.c  xxh_mqtt.h
SW2812B/main/playmv/: playmv.H  playmv.c
SW2812B/main/sk9822_drive/: sk9822.c  sk9822.h
SW2812B/main/tf/: tf.c  tf.h
SW2812B/main/wifi/: xxh_wifi.c  xxh_wifi.h
SW2812B/main/ws2812_drive/: ws2812_drive.c  ws2812_drive.h
adc/main/: adc1_example_main.c
cpp_pthread/main/: cpp_pthread.cpp
espnow/: sdkconfig  sdkconfig.old
espnow/main/: espnow_example.h  espnow_example_main.c
gpio/main/: gpio_example_main.c
scripts/: tcpclient.py  udpclient.py
sd_card/main/: sd_card_example_main.c
spi_master/main/: CMakeLists.txt  decode_image.c  spi_master_example_main.c
tcp/: sdkconfig
tcp/main/: CMakeLists.txt  app_main.c  xxh_gpio.c  xxh_mqtt.c  xxh_now.c  xxh_pt6311.c  xxh_wifi.c
tcp/main/include/: app_main.h  xxh_gpio.h  xxh_mqtt.h  xxh_now.h  xxh_pt6311.h  xxh_wifi.h
tcp_server/: sdkconfig  sdkconfig.old
tcp_server/main/: tcp_server.c
