idf_component_register(SRCS 
                    "user_main.c"
                    "ws2812_drive/ws2812_drive.c"
                    "sk9822_drive/sk9822.c"
                    "button/button.c"
                    "screen_drive/screen_drive.c"
                    "wifi/xxh_wifi.c"
                    "mqtt/xxh_mqtt.c"
                    INCLUDE_DIRS ".")