idf_component_register(SRCS 
                    "user_fun.c"
                    "user_main.c"
                    "ws2812_drive/ws2812_drive.c"
                    "sk9822_drive/sk9822.c"
                    "button/button.c"
		                "clock/clock.c"
                    "screen_drive/screen_drive.c"
                    "wifi/xxh_wifi.c"
                    "mqtt/xxh_mqtt.c"
                    "tf/tf.c"
                    "LZ77/LZ77.C"
                    "playMv/playMv.c"
                    "adc_drive.c"
                    INCLUDE_DIRS ".")